CoreFoundation: add a workaround for Linux with the rebranch

Avoid optimizations on Linux as LICM, LoadStoreHoisting, and inlining
seems to play bad tricks on range merging.  This allows the
AttributedString tests to pass on Linux after the rebranch.

SR-15302 tracks resolving the underlying issue(s).

Thanks to @etcwilde for tracking down this issue!